--- a/article/references.bib
+++ b/article/references.bib
@@ -53,7 +53,8 @@
   publisher = {Association for Computational Linguistics},
   url       = {https://aclanthology.org/2023.bea-1.1},
   doi       = {10.18653/v1/2023.bea-1.1},
-  pages     = {1--19}
+  pages     = {1--19},
+  note      = {Version: 1.0.9}
 }
 @article{devlin2018bert,
   title   = {Bert: Pre-training of deep bidirectional transformers for language understanding},
@@ -546,7 +547,8 @@
   volume  = {17},
   pages   = {261--272},
   adsurl  = {https://rdcu.be/b08Wh},
-  doi     = {10.1038/s41592-019-0686-2}
+  doi     = {10.1038/s41592-019-0686-2},
+  note    = {Version: 1.13.1}
 }
 
 @article{harris2020array,
