--- a/article/main.tex
+++ b/article/main.tex
@@ -1,7 +1,10 @@
 \pdfoutput=1
 
 \documentclass[11pt]{article}
-\usepackage[review]{acl}
+
+\usepackage{acl}
+\usepackage{times}
+\usepackage{latexsym}
 
 \usepackage{algorithmic}
 \usepackage{algorithm}
